clang/test/BSC/Negative/Generic/StructAndFunction/call_undeclared_generic_function2/call_undeclared_generic_function2.cbs
// RUN: %clang_cc1 -verify %s

void test5() {
  int* _Owned oriPtr = safe_malloc<int>(0);  // expected-error{{use of undeclared identifier 'safe_malloc'}}
  int* _Borrow p = &_Mut *oriPtr;
  while (rand()) {    // expected-error{{use of undeclared identifier 'rand'}}
    if (rand()) {    // expected-error{{use of undeclared identifier 'rand'}}
      free_owned<int>(oriPtr);    // expected-error{{use of undeclared identifier 'free_owned'}}
      use_mut(p);    // expected-error{{use of undeclared identifier 'use_mut'}}
    } else {
      free_owned<int>(oriPtr);    // expected-error{{use of undeclared identifier 'free_owned'}}
    }   
    return;
  }
  free_owned<int>(oriPtr);    // expected-error{{use of undeclared identifier 'free_owned'}}
}